fix: correct image path to relative path 'picGrey.png'

--- a/index.html
+++ b/index.html
@@ -652,6 +652,13 @@
         }
     }
     </style>
+    <style>
+        /* TEMPORARY FIX - Remove mask */
+        .profile-img-container {
+        -webkit-mask: none !important;
+        mask: none !important;
+        }
+    </style>
 </head>
 <body>
     <div class="bg-decoration">
@@ -665,7 +672,7 @@
             <div class="profile-card">
                 <div class="profile-img-container">
                     <!-- FIXED: Changed to correct image path -->
-                    <img src="https://hamzamir-resume-app-gzgwc0d9f2csexgt.eastasia-01.azurewebsites.net/picGrey.png" alt="Hamza Mir" class="profile-img">
+                    <img src="picGrey.png" alt="Hamza Mir" class="profile-img">
                 </div>
                 
                 <div class="profile-title">
